fix: change unit tests to use only one function per test